// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notification snapshots > EventCommentCreated 1`] = `undefined`;

exports[`notification snapshots > EventCommentCreated 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Author</strong> a écrit un commentaire sur votre événement <a href="http://localhost:8000/events/eventId">Event title</a> :</p><blockquote style="margin: 0; padding: 8px 16px; border: 1px solid #CCC; border-radius: 4px; background: #fafafc;"><p>Comment body</p></blockquote>",
    "subject": "Commentaire de Author sur votre événement "Event title"",
    "text": "Bonjour Member,

Author a écrit un commentaire sur votre événement Event title (http://localhost:8000/events/eventId) :

Comment body",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > EventCreated 1`] = `undefined`;

exports[`notification snapshots > EventCreated 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Organizer</strong> a créé un nouvel événement : <a href="http://localhost:8000/events/eventId">Event title</a></p><blockquote style="margin: 0; padding: 8px 16px; border: 1px solid #CCC; border-radius: 4px; background: #fafafc;"><p>Event body</p></blockquote>",
    "subject": "Nouvel événement : Event title",
    "text": "Bonjour Member,

Organizer a créé un nouvel événement : Event title (http://localhost:8000/events/eventId)

Event body",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > EventParticipationSet 1`] = `undefined`;

exports[`notification snapshots > EventParticipationSet 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Participant</strong> participera à votre événement <a href="http://localhost:8000/events/eventId">Event title</a>.</p>",
    "subject": "Participation à votre événement Event title",
    "text": "Bonjour Member,

Participant participera à votre événement Event title (http://localhost:8000/events/eventId).",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > RequestCommentCreated 1`] = `undefined`;

exports[`notification snapshots > RequestCommentCreated 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Author</strong> a écrit un commentaire sur votre demande <a href="http://localhost:8000/requests/requestId">Request title</a> :</p><blockquote style="margin: 0; padding: 8px 16px; border: 1px solid #CCC; border-radius: 4px; background: #fafafc;"><p>Comment body</p></blockquote>",
    "subject": "Commentaire de Author sur votre demande "Request title"",
    "text": "Bonjour Member,

Author a écrit un commentaire sur votre demande Request title (http://localhost:8000/requests/requestId) :

Comment body",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > RequestCreated 1`] = `undefined`;

exports[`notification snapshots > RequestCreated 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Requester</strong> a publié une nouvelle demande : <a href="http://localhost:8000/requests/requestId">Request title</a></p><blockquote style="margin: 0; padding: 8px 16px; border: 1px solid #CCC; border-radius: 4px; background: #fafafc;"><p>Request body</p></blockquote>",
    "subject": "Demande de Requester : Request title",
    "text": "Bonjour Member,

Requester a publié une nouvelle demande : Request title (http://localhost:8000/requests/requestId)

Request body",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > RequestStatusChanged 1`] = `undefined`;

exports[`notification snapshots > RequestStatusChanged 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Requester</strong> a annulé sa demande <a href="http://localhost:8000/requests/requestId">Request title</a></p>",
    "subject": "Requester a annulé sa demande "Request title"",
    "text": "Bonjour Member,

Requester a annulé sa demande Request title (http://localhost:8000/requests/requestId)",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > Test 1`] = `undefined`;

exports[`notification snapshots > Test 2`] = `
[
  {
    "html": "<p>Hello Member, this is <strong>a test notification</strong>! I hope it works 😄</p><p>Here is <a href="http://localhost:8000">a link</a>.</p><p>42 is a good answer.</p><p>And here is some verbatim content:</p><blockquote style="margin: 0; padding: 8px 16px; border: 1px solid #CCC; border-radius: 4px; background: #fafafc;"><p>hello <strong>world</strong></p></blockquote><p>Cheers!</p>",
    "subject": "Test notification (email)",
    "text": "Hello Member, this is a test notification! I hope it works 😄

Here is a link (http://localhost:8000).

42 is a good answer.

And here is some verbatim content:

hello world

Cheers!",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > TransactionCanceled 1`] = `undefined`;

exports[`notification snapshots > TransactionCanceled 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Payer</strong> a annulé l'échange : Transaction description.</p>",
    "subject": "Payer n'a pas accepté votre demande de coins pour l'échange : Transaction description",
    "text": "Bonjour Member,

Payer a annulé l'échange : Transaction description.",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > TransactionCompleted 1`] = `undefined`;

exports[`notification snapshots > TransactionCompleted 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Payer</strong> a accepté votre demande de <strong>123 coins</strong> pour l'échange : <a href="http://localhost:8000/profile/transactions?transactionId=transactionId">Transaction description</a>.</p>",
    "subject": "Vous avez reçu 123 coins pour l'échange : Transaction description",
    "text": "Bonjour Member,

Payer a accepté votre demande de 123 coins pour l'échange : Transaction description (http://localhost:8000/profile/transactions?transactionId=transactionId).",
    "to": "member@email",
  },
]
`;

exports[`notification snapshots > TransactionPending 1`] = `undefined`;

exports[`notification snapshots > TransactionPending 2`] = `
[
  {
    "html": "<p>Bonjour Member,</p><p><strong>Recipient</strong> vous demande <strong>123 coins</strong> pour l'échange : Transaction description.</p><p>Vous pouvez valider ou refuser cet échange depuis <a href="http://localhost:8000/profile/transactions?transactionId=transactionId">votre page de profil</a>.</p>",
    "subject": "Demande de coins pour l'échange : Transaction description",
    "text": "Bonjour Member,

Recipient vous demande 123 coins pour l'échange : Transaction description.

Vous pouvez valider ou refuser cet échange depuis votre page de profil (http://localhost:8000/profile/transactions?transactionId=transactionId).",
    "to": "member@email",
  },
]
`;
